force-app/main/default/objects/Activity/fields/Admission_Time__c.field-meta.xml
<CustomField>
    <fullName>Admission_Time__c</fullName>
    <label>Admission Time</label>
    <type>DateTime</type>
</CustomField>