force-app/main/default/objects/Activity/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <formula>IF(ISBLANK( Linked_Patient_Donor__r.Allergy_Information__c ), &quot;No Recorded Allergies&quot;, Linked_Patient_Donor__r.Allergy_Information__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allergies</label>
    <type>Text</type>
</CustomField>