force-app/main/default/objects/Activity/fields/Anaesthetist_Name__c.field-meta.xml
<CustomField>
    <fullName>Anaesthetist_Name__c</fullName>
    <label>Anaesthetist Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>