force-app/main/default/objects/Activity/fields/Andrology_Type__c.field-meta.xml
<CustomField>
    <fullName>Andrology_Type__c</fullName>
    <label>Andrology Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Andrology_Types</valueSetName>
    </valueSet>
</CustomField>