force-app/main/default/objects/Activity/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Owner:Calendar.Name)),
    Owner:Calendar.Name,
    IF(
        NOT(ISBLANK(Owner:Queue.QueueName)),
        Owner:Queue.QueueName,
        IF(
            NOT(ISBLANK(Owner:User.FirstName)),
            Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,
            &quot;&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Name</label>
    <type>Text</type>
</CustomField>