force-app/main/default/objects/Activity/fields/Auto_SMS__c.field-meta.xml
<CustomField>
    <fullName>Auto_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto SMS</label>
    <type>Checkbox</type>
</CustomField>