force-app/main/default/objects/Activity/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <formula>Linked_Patient_Donor__r.BMI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BMI</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>