force-app/main/default/objects/Activity/fields/Calendar_Name__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Name__c</fullName>
    <formula>Owner:Calendar.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Name</label>
    <type>Text</type>
</CustomField>