force-app/main/default/objects/Activity/fields/Confirm_Consent_Signed__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Consent_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Consent Signed</label>
    <type>Checkbox</type>
</CustomField>