force-app/main/default/objects/Activity/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>