force-app/main/default/objects/Activity/fields/Doctor_Undertaking_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Undertaking_Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Undertaking Procedure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Doctor__c.Internal_Doctor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>