force-app/main/default/objects/Activity/fields/Doctors_Comments__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Comments__c</fullName>
    <label>Doctors Comments</label>
    <type>TextArea</type>
</CustomField>