force-app/main/default/objects/Activity/fields/Doctors_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Rooms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doctors Rooms</label>
    <type>Checkbox</type>
</CustomField>