force-app/main/default/objects/Activity/fields/Examination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Examination_Notes__c</fullName>
    <label>Examination Notes</label>
    <type>TextArea</type>
</CustomField>