force-app/main/default/objects/Activity/fields/External_Scan__c.field-meta.xml
<CustomField>
    <fullName>External_Scan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Scan</label>
    <type>Checkbox</type>
</CustomField>