force-app/main/default/objects/Activity/fields/Fasting_Time__c.field-meta.xml
<CustomField>
    <fullName>Fasting_Time__c</fullName>
    <label>Fasting Time</label>
    <type>Time</type>
</CustomField>