force-app/main/default/objects/Activity/fields/Health_Fund_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Health_Fund_Expiry__c</fullName>
    <formula>Linked_Patient_Donor__r.Insurance_Expiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Fund Expiry</label>
    <type>Text</type>
</CustomField>