force-app/main/default/objects/Activity/fields/Health_Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Health_Fund_Name__c</fullName>
    <formula>Linked_Patient_Donor__r.Insuring_Health_Fund_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Fund Name</label>
    <type>Text</type>
</CustomField>