force-app/main/default/objects/Activity/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <label>History</label>
    <type>TextArea</type>
</CustomField>