force-app/main/default/objects/Activity/fields/In_Waiting_Room__c.field-meta.xml
<CustomField>
    <fullName>In_Waiting_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Waiting Room</label>
    <type>Checkbox</type>
</CustomField>