force-app/main/default/objects/Activity/fields/Insemination_Method__c.field-meta.xml
<CustomField>
    <fullName>Insemination_Method__c</fullName>
    <label>Insemination Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>