force-app/main/default/objects/Activity/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Fertility Consult</fullName>
            </value>
            <value>
                <fullName>FET Interview</fullName>
                <label>FET Overview</label>
            </value>
            <value>
                <fullName>IVF Overview</fullName>
            </value>
            <value>
                <fullName>OI Overview</fullName>
            </value>
            <value>
                <fullName>IUI/DI Overview</fullName>
            </value>
            <value>
                <fullName>Egg Donor Overview</fullName>
            </value>
            <value>
                <fullName>Sperm Donor Overview</fullName>
            </value>
            <value>
                <fullName>Recipient Overview</fullName>
            </value>
            <value>
                <fullName>Fertility Preservation Overview</fullName>
            </value>
            <value>
                <fullName>Account Overview</fullName>
            </value>
            <value>
                <fullName>Collection of Medications</fullName>
            </value>
            <value>
                <fullName>EPU</fullName>
                <isActive>false</isActive>
                <label>EPU</label>
            </value>
            <value>
                <fullName>Embryo Transfer</fullName>
                <isActive>false</isActive>
                <label>Embryo Transfer</label>
            </value>
            <value>
                <fullName>FET Scan</fullName>
                <isActive>false</isActive>
                <label>FET Scan</label>
            </value>
            <value>
                <fullName>Filgrastim</fullName>
                <isActive>false</isActive>
                <label>Filgrastim</label>
            </value>
            <value>
                <fullName>IUI / DI</fullName>
                <isActive>false</isActive>
                <label>IUI / DI</label>
            </value>
            <value>
                <fullName>IUI Collection</fullName>
                <isActive>false</isActive>
                <label>IUI Collection</label>
            </value>
            <value>
                <fullName>IUI/DI Scan</fullName>
                <isActive>false</isActive>
                <label>IUI/DI Scan</label>
            </value>
            <value>
                <fullName>OI Scan</fullName>
                <isActive>false</isActive>
                <label>OI Scan</label>
            </value>
            <value>
                <fullName>PRP Insemination</fullName>
                <isActive>false</isActive>
                <label>PRP Insemination</label>
            </value>
            <value>
                <fullName>PRP Preparations</fullName>
                <isActive>false</isActive>
                <label>PRP Preparations</label>
            </value>
            <value>
                <fullName>Semen Analysis</fullName>
                <isActive>false</isActive>
                <label>Semen Analysis</label>
            </value>
            <value>
                <fullName>Stim Scan</fullName>
                <isActive>false</isActive>
                <label>Stim Scan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>