force-app/main/default/objects/Activity/fields/Linked_Caledars__c.field-meta.xml
<CustomField>
    <fullName>Linked_Caledars__c</fullName>
    <label>Linked Caledars</label>
    <length>255</length>
    <type>Text</type>
</CustomField>