force-app/main/default/objects/Activity/fields/Linked_Doctor_Event__c.field-meta.xml
<CustomField>
    <fullName>Linked_Doctor_Event__c</fullName>
    <label>Linked Doctor Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>