force-app/main/default/objects/Activity/fields/Linked_Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Linked_Patient_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Dev use and formulas only, Should never be shown on page layout.</description>
    <label>Linked Patient &amp; Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>