force-app/main/default/objects/Activity/fields/Location_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Location_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Lookup</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>