force-app/main/default/objects/Activity/fields/Make_Public__c.field-meta.xml
<CustomField>
    <fullName>Make_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifically for task creation to assign to doctor queue from individual</description>
    <label>Make Public</label>
    <type>Checkbox</type>
</CustomField>