force-app/main/default/objects/Activity/fields/Medicare_Details__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Details__c</fullName>
    <formula>&quot;Number: &quot; &amp;Linked_Patient_Donor__r.Medicare_Number__c &amp;&quot; Expiry: &quot;&amp; Linked_Patient_Donor__r.Expiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicare Details</label>
    <type>Text</type>
</CustomField>