force-app/main/default/objects/Activity/fields/Pathology_Request__c.field-meta.xml
<CustomField>
    <fullName>Pathology_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pathology Request</label>
    <referenceTo>Pathology_Request__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>