force-app/main/default/objects/Activity/fields/Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>Patient_DOB__c</fullName>
    <formula>Linked_Patient_Donor__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient DOB</label>
    <type>Date</type>
</CustomField>