force-app/main/default/objects/Activity/fields/Patient_File_Warning__c.field-meta.xml
<CustomField>
    <fullName>Patient_File_Warning__c</fullName>
    <defaultValue>&quot;WARNING THIS IS NOT AN IN CYCLE NOTE&quot;</defaultValue>
    <label>Patient File Warning</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>