force-app/main/default/objects/Activity/fields/Patient_History__c.field-meta.xml
<CustomField>
    <fullName>Patient_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient History</label>
    <referenceTo>Patient_History__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>