force-app/main/default/objects/Activity/fields/Patient_Plan__c.field-meta.xml
<CustomField>
    <fullName>Patient_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Plan</label>
    <referenceTo>Patient_Plan__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>