force-app/main/default/objects/Activity/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>TextArea</type>
</CustomField>