force-app/main/default/objects/Activity/fields/Private_Health_Fund_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Private_Health_Fund_Membership_Number__c</fullName>
    <formula>Linked_Patient_Donor__r.Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private Health Fund Membership Number</label>
    <type>Text</type>
</CustomField>