force-app/main/default/objects/Activity/fields/Procedure_Type__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Type__c</fullName>
    <label>Procedure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Procedure_Types</valueSetName>
    </valueSet>
</CustomField>