force-app/main/default/objects/Activity/fields/Proposed_Item_Number_s__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Item_Number_s__c</fullName>
    <label>Proposed Item Number(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>