force-app/main/default/objects/Activity/fields/Reason_for_Encounter__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Encounter__c</fullName>
    <label>Reason for Encounter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>