force-app/main/default/objects/Activity/fields/Result_Based_Task__c.field-meta.xml
<CustomField>
    <fullName>Result_Based_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Result Based Task</label>
    <type>Checkbox</type>
</CustomField>