force-app/main/default/objects/Activity/fields/Scan_Type__c.field-meta.xml
<CustomField>
    <fullName>Scan_Type__c</fullName>
    <label>Scan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>Pregnancy Scan</fullName>
            </value>
            <value>
                <fullName>Follicle Scan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>