force-app/main/default/objects/Activity/fields/Staff_Member_Allocated_to_Complete_Task__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_Allocated_to_Complete_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Member Allocated to Complete Task</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>