force-app/main/default/objects/Activity/fields/Task_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Task_Doctor__c</fullName>
    <formula>Linked_Patient_Donor__r.Treating_Doctor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Doctor</label>
    <type>Text</type>
</CustomField>