force-app/main/default/objects/Activity/fields/Tentative__c.field-meta.xml
<CustomField>
    <fullName>Tentative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tentative</label>
    <type>Checkbox</type>
</CustomField>